--- a/potch-huis/src/Auth/Register.css
+++ b/potch-huis/src/Auth/Register.css
@@ -3,19 +3,30 @@
 /* Add padding to containers */
 .container {
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.pBtn {
+  width: 10%;
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
+input[type=text], input[type=password], input[type=tel], input[type=email] {
   padding: 15px;
   margin: 5px 0 22px 0;
-  display: inline-block;
   border: none;
   background: #f1f1f1;
+  text-align: center;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=email]:focus{
   background-color: #ddd;
   outline: none;
 }
