--- a/potch-huis/src/Menu/Menu.css
+++ b/potch-huis/src/Menu/Menu.css
@@ -1,32 +1,47 @@
+.body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100vh;
+  height: 80vh;
+  margin: 5%;
+  text-align: center;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
+
 * {box-sizing: border-box}
 
 /* Add padding to containers */
 .container {
   padding: 16px;
-  display: flex;
-  flex-direction: column;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.pBtn {
-  width: 10%;
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password], input[type=tel], input[type=email] {
+input[type=text], input[type=password] {
+  width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
+  display: inline-block;
   border: none;
   background: #f1f1f1;
-  text-align: center;
 }
 
-input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=email]:focus{
+input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
