--- a/potch-huis/src/Auth/Login.css
+++ b/potch-huis/src/Auth/Login.css
@@ -1,65 +1,153 @@
-* {box-sizing: border-box}
+:root {
+  --background: #fff;
+  --text-primary: #000;
+  --text-secondary: rgb(0, 182, 91);
+  --accent: rgb(0, 182, 91);
+  --border: #333;
+  --form-bg: #fff;
+}
 
-/* Add padding to containers */
+[data-theme='dark'] {
+  --background: #000;
+  --text-primary: #fff;
+  --text-secondary: rgb(0, 182, 91);
+  --accent: rgb(0, 182, 91);
+  --border: #808080;
+  --form-bg: #191919;
+}
+
+a {
+  color: var(--text-secondary);
+}
+
+.app {
+  background-color: var(--background);
+  color: var(--text-primary);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 0.8rem;
+  transition: all .5s;
+}
+
+.login-container h1 {
+  text-align: center;
+  margin: -6rem 0 2 rem;
+  font-size: 48px;
+}
+
+h2 {
+  text-align: center;
+  padding: 1rem;
+}
+
+.theme-toggle i {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.theme-toggle {
+  text-align: center;
+}
+
 .container {
-  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  width: 300px;
+  margin: auto;
+  box-shadow: 0px 0px 12px var(--border);
+  border-radius: 8px;
+  background-color: var(--form-bg);
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.top i {
+  font-size: 1rem;
+}
+
+.divider {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid var(--text-primary);
+  line-height: .1rem;
+  margin: 2rem 0;
+}
+
+span {
+  padding: 0 10px;
+  background-color: var(--form-bg);
+}
+
+form {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.pBtn {
-  width: 10%;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password], input[type=tel], input[type=email] {
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-  text-align: center;
-}
-
-input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=email]:focus{
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-/* Set a style for the submit/register button */
-.registerbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px 20px;
+label {
   margin: 8px 0;
-  border: none;
-  cursor: pointer;
+  font-weight: 600;
+}
+
+input {
+  padding: 8px;
+  margin-bottom: 8px;
+  border-radius: 6px;
+  border: 1px solid var(--border);
+  background: var(--background);
+  color: var(--text-primary);
+}
+
+.remember {
+  display: flex;
+  align-items: center;
   width: 100%;
-  opacity: 0.9;
 }
 
-.registerbtn:hover {
-  opacity:1;
+.remember p {
+  padding-left: 8px;
 }
 
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
+input[type=checkbox]:checked {
+  margin: 0;
+  padding: 0;
 }
 
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: #f1f1f1;
-  text-align: center;
+Link {
+  background-color: var(--accent);
+  border: 1px solid var(--accent);
+  color: #fff;
+  margin: 16px 0;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: .8rem;
+}
+
+.create {
+  font-size: 1rem;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width:500px) {
+  .login-container{
+      width: 90%;
+  }
 }
