--- a/potch-huis/src/index.css
+++ b/potch-huis/src/index.css
@@ -1,175 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-:root {
-  --background: #fff;
-  --text-primary: #000;
-  --text-secondary: rgb(0, 182, 91);
-  --accent: rgb(0, 182, 91);
-  --border: #333;
-  --form-bg: #fff;
-}
-
-[data-theme='dark'] {
-  --background: #000;
-  --text-primary: #fff;
-  --text-secondary: rgb(0, 182, 91);
-  --accent: rgb(0, 182, 91);
-  --border: #808080;
-  --form-bg: #191919;
-}
-
-a {
-  color: var(--text-secondary);
+html,
+body,
+#root,
+.app,
+.content {
+  height: 100%;
+  width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .app {
-  background-color: var(--background);
-  color: var(--text-primary);
-  height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 0.8rem;
-  transition: all .5s;
+  position: relative;
 }
 
-.login-container h1 {
-  text-align: center;
-  margin: -6rem 0 2 rem;
-  font-size: 48px;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-h2 {
-  text-align: center;
-  padding: 1rem;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
 }
 
-.theme-toggle i {
-  font-size: 2rem;
-  cursor: pointer;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
-.theme-toggle {
-  text-align: center;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 1.5rem;
-  width: 300px;
-  margin: auto;
-  box-shadow: 0px 0px 12px var(--border);
-  border-radius: 8px;
-  background-color: var(--form-bg);
-}
 
-.top {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.top i {
-  font-size: 1rem;
-}
-
-.divider {
-  width: 100%;
-  text-align: center;
-  border-bottom: 1px solid var(--text-primary);
-  line-height: .1rem;
-  margin: 2rem 0;
-}
-
-span {
-  padding: 0 10px;
-  background-color: var(--form-bg);
-}
-
-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-label {
-  margin: 8px 0;
-  font-weight: 600;
-}
-
-input {
-  padding: 8px;
-  margin-bottom: 8px;
-  border-radius: 6px;
-  border: 1px solid var(--border);
-  background: var(--background);
-  color: var(--text-primary);
-}
-
-.remember {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.remember p {
-  padding-left: 8px;
-}
-
-input[type=checkbox]:checked {
-  margin: 0;
-  padding: 0;
-}
-
-Link {
-  background-color: var(--accent);
-  border: 1px solid var(--accent);
-  color: #fff;
-  margin: 16px 0;
-  padding: 10px;
-  border-radius: 10px;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.bottom {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  font-size: .8rem;
-}
-
-.create {
-  font-size: 1rem;
-  margin-top: 1rem;
-  cursor: pointer;
-}
-
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  flex-direction: column;
-  width: 500px;
-}
-
-@media screen and (max-width:500px) {
-  .login-container {
-      width: 90%;
-  }
-}
